<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="true"
        android:layout_margin="@dimen/layout_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox1"
                    android:text="@string/truck"
                    android:layout_alignBaseline="@+id/editText_1"
                    android:layout_alignBottom="@+id/editText_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox2"
                    android:text="@string/tractor"
                    android:layout_alignBaseline="@+id/editText_2"
                    android:layout_alignBottom="@+id/editText_2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox3"
                    android:text="@string/axe"
                    android:layout_alignBaseline="@+id/editText_3"
                    android:layout_alignBottom="@+id/editText_3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_3" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox4"
                    android:text="@string/shaw"
                    android:layout_alignBaseline="@+id/editText_4"
                    android:layout_alignBottom="@+id/editText_4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_4" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox5"
                    android:text="@string/sickle"
                    android:layout_alignBaseline="@+id/editText_5"
                    android:layout_alignBottom="@+id/editText_5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_5" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox6"
                    android:text="@string/timber"
                    android:layout_alignBaseline="@+id/editText_6"
                    android:layout_alignBottom="@+id/editText_6"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="numberDecimal"
                    android:id="@+id/editText_6" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox7"
                    android:text="@string/gun"
                    android:layout_alignBaseline="@+id/editText_7"
                    android:layout_alignBottom="@+id/editText_7"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_7" />

            </RelativeLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_gravity="center_horizontal"
                android:id="@+id/done" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>