<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="true"
        android:layout_margin="@dimen/layout_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox1"
                    android:text="@string/babiyo"
                    android:layout_alignBaseline="@+id/editText_1"
                    android:layout_alignBottom="@+id/editText_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox2"
                    android:text="@string/napier"
                    android:layout_alignBaseline="@+id/editText_2"
                    android:layout_alignBottom="@+id/editText_2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />



                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/editText_2" />
            </RelativeLayout>


            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_gravity="center_horizontal"
                android:id="@+id/done" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>