<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="true"
        android:layout_margin="@dimen/layout_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox1"
                    android:text="@string/guns"
                    android:layout_alignBaseline="@+id/guns_no_id"
                    android:layout_alignBottom="@+id/guns_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/guns_no_id" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox2"
                    android:text="@string/snares"
                    android:layout_alignBaseline="@+id/snares_no_id"
                    android:layout_alignBottom="@+id/snares_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/snares_no_id" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox3"
                    android:text="@string/khabar_nets"
                    android:layout_alignBaseline="@+id/khabar_nets_no_id"
                    android:layout_alignBottom="@+id/khabar_nets_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/khabar_nets_no_id" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox4"
                    android:text="@string/leg_hole_traps"
                    android:layout_alignBaseline="@+id/leg_hole_traps_no_id"
                    android:layout_alignBottom="@+id/leg_hole_traps_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                />

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/leg_hole_traps_no_id" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox5"
                    android:text="@string/Bullets"
                    android:layout_alignBaseline="@+id/bullets_no_id"
                    android:layout_alignBottom="@+id/bullets_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />


                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/bullets_no_id" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox6"
                    android:text="@string/dead_animal"
                    android:layout_alignBaseline="@+id/dead_animal_no_id"
                    android:layout_alignBottom="@+id/dead_animal_no_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />


                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:id="@+id/dead_animal_no_id" />

            </RelativeLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Others"
                android:id="@+id/other_items_id"
                android:checked="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/poaching_otherItems"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:hint="Others (Specify)"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_gravity="center_horizontal"
                android:id="@+id/done" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>